--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -14,6 +14,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "**TODO**:\n",
+    "- setting (modify a dataframe): df.at[...], df.iat[...] http://pandas.pydata.org/pandas-docs/stable/10min.html#setting\n",
+    "- HDF5\n",
+    "- dates (...)\n",
+    "- apply() http://pandas.pydata.org/pandas-docs/stable/10min.html#apply\n",
+    "- Histogramming http://pandas.pydata.org/pandas-docs/stable/10min.html#histogramming\n",
+    "- Concat / append"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Official documentation: http://pandas.pydata.org/pandas-docs/stable/"
@@ -512,6 +529,63 @@
    "outputs": [],
    "source": [
     "df.memory_usage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### More details about dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame's columns can have different types. But what about rows ?\n",
+    "\n",
+    "What append when a DataFrame with columns having different type is transposed ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dict = {'A': 'foo',\n",
+    "             'B': [10, 20, 30],\n",
+    "             'C': 3}\n",
+    "df = pd.DataFrame(data_dict)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.T\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.dtypes"
    ]
   },
   {
@@ -1647,7 +1721,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply a function to selected colunms values"
+    "## Setting values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply a function to selected colunms values"
    ]
   },
   {
@@ -1687,7 +1768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply a function to selected rows values"
+    "### Apply a function to selected rows values"
    ]
   },
   {
@@ -1727,7 +1808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort a data frame"
+    "## Sort a DataFrame"
    ]
   },
   {
@@ -1920,7 +2001,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(how='any')"
+    "df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(how='any')      # but 'any' is the default value..."
    ]
   },
   {
@@ -1947,6 +2037,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(subset=['B', 'C'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1959,7 +2058,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(how='any', axis=1)"
+    "df.dropna(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(axis=1, how='any')      # but 'any' is the default value..."
    ]
   },
   {
@@ -1975,7 +2083,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(subset=[2], axis=1)"
+    "df.dropna(axis=1, subset=[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(axis=1, subset=[1, 2])"
    ]
   },
   {
