Add an example.

--- a/python_scipy_io_wave_en.ipynb
+++ b/python_scipy_io_wave_en.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "t = np.linspace(0, 5, sample_rate*5)\n",
     "data = np.sin(2*np.pi*220*t) + np.sin(2*np.pi*224*t)\n",
-    "data /= 2."
+    "data /= 2.          # to keep data between -1 and 1"
    ]
   },
   {
@@ -192,6 +192,68 @@
    "outputs": [],
    "source": [
     "plt.plot(data[0:20000]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!wget -O sound.wav https://github.com/karoldvl/ESC-50/raw/master/audio/1-100038-A-14.wav\n",
+    "!wget -O sound.wav https://github.com/jdhp-misc/sample-sounds/raw/master/piano_notes/386725__luckylux__sol.wav"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_rate, data = wavfile.read(\"sound.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(data[:,0], rate=sample_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(data[:,0]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm sound.wav"
    ]
   }
  ],
