Add audio datasets and add ML conferences.

--- a/ai_ml_datasets_benchmarks_and_competitions_en.ipynb
+++ b/ai_ml_datasets_benchmarks_and_competitions_en.ipynb
@@ -35,6 +35,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sound data:\n",
+    "* https://freesound.org/search/: more than 300000 sounds under CC license\n",
+    "* https://github.com/karoldvl/ESC-50: a dataset of 2000 labeled sounds (from freesound.org)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [
      "hide"
@@ -42,7 +51,7 @@
    },
    "source": [
     "Miscellaneous data:\n",
-    "* https://voice.mozilla.org/ : an open source voice data set (see also http://linuxfr.org/news/mozilla-common-voice-vers-une-reconnaissance-vocale-libre)"
+    "* https://voice.mozilla.org/: an open source voice data set (see also http://linuxfr.org/news/mozilla-common-voice-vers-une-reconnaissance-vocale-libre)"
    ]
   },
   {
@@ -154,6 +163,29 @@
     "* PC² (https://en.wikipedia.org/wiki/PC%C2%B2): Programming Contest Control System developed at California State University, Sacramento in support of Computer Programming Contest activities of the ACM, and in particular the ACM International Collegiate Programming Contest.\n",
     "* https://en.wikipedia.org/wiki/Caltech_101\n",
     "* https://en.wikipedia.org/wiki/LabelMe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conferences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* IJCAI (International Joint Conference on Artificial Intelligence) A*\n",
+    "* ICML  (International Conference on Machine Learning) A*\n",
+    "* ECML  (European Conference on Machine Learning) A\n",
+    "* ACML  (Asian Conference on Machine Learning)\n",
+    "* NIPS  (Advances in Neural Information Processing Systems) A*\n",
+    "* COLT  (Annual Conference on Computational Learning Theory) A*\n",
+    "\n",
+    "* ECAI  (European Conference on Artificial Intelligence) A\n",
+    "* ICONIP  (International Conference on Neural Information Processing) A\n",
+    "* IJCNN  (IEEE International Joint Conference on Neural Networks) A"
    ]
   }
  ],
