--- a/notebook_snippets_en.ipynb
+++ b/notebook_snippets_en.ipynb
@@ -133,6 +133,8 @@
     "* Select the previous cell: k\n",
     "* Select the next cell: j\n",
     "\n",
+    "* Merge selected cells, or current cell with cell below if only one cell selected: Shift + m\n",
+    "\n",
     "In **edit** mode:\n",
     "\n",
     "* Code completion or indent: Tab\n",
@@ -260,6 +262,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Interactive plots with Plotly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: https://plot.ly/ipython-notebooks/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive plots with Bokeh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: http://bokeh.pydata.org/en/latest/docs/user_guide/notebook.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedded HTML and Javascript"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<div id=\"toc\"></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "var toc = document.getElementById(\"toc\");\n",
+    "toc.innerHTML = \"<b>Table of contents:</b>\";\n",
+    "toc.innerHTML += \"<ol>\"\n",
+    "\n",
+    "var h_list = $(\"h2, h3\");    //$(\"h2\");    // document.getElementsByTagName(\"h2\");\n",
+    "for(var i = 0 ; i < h_list.length ; i++) {\n",
+    "    var h = h_list[i];\n",
+    "    var h_str = h.textContent.slice(0, -1);  // \"slice(0, -1)\" remove the last character\n",
+    "    if(h_str.length > 0) {\n",
+    "        if(h.tagName == \"H2\") {  // https://stackoverflow.com/questions/10539419/javascript-get-elements-tag\n",
+    "            toc.innerHTML += \"<li><a href=\\\"#\" + h_str.replace(/\\s+/g, '-') + \"\\\">\" + h_str + \"</a></li>\";\n",
+    "        } else if(h.tagName == \"H3\") {  // https://stackoverflow.com/questions/10539419/javascript-get-elements-tag\n",
+    "            toc.innerHTML += \"<li> &nbsp;&nbsp;&nbsp; <a href=\\\"#\" + h_str.replace(/\\s+/g, '-') + \"\\\">\" + h_str + \"</a></li>\";\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "toc.innerHTML += \"</ol>\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## IPython built-in magic commands"
    ]
   },
@@ -315,7 +389,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load ./notebook_snippets_run_mpl_test.py"
+    "# %load ./notebook_snippets_run_mpl_test.py\n",
+    "#!/usr/bin/env python3\n",
+    "\n",
+    "# Copyright (c) 2012 Jérémie DECOCK (http://www.jdhp.org)\n",
+    "\n",
+    "# Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+    "# of this software and associated documentation files (the \"Software\"), to deal\n",
+    "# in the Software without restriction, including without limitation the rights\n",
+    "# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+    "# copies of the Software, and to permit persons to whom the Software is\n",
+    "# furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "# The above copyright notice and this permission notice shall be included in\n",
+    "# all copies or substantial portions of the Software.\n",
+    "\n",
+    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+    "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+    "# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+    "# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n",
+    "# THE SOFTWARE.\n",
+    "\n",
+    "\"\"\"\n",
+    "This module has been written to illustrate the ``%run`` magic command in\n",
+    "``notebook_snippets.ipynb``.\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def main():\n",
+    "    x = np.arange(-10, 10, 0.1)\n",
+    "    y = np.cos(x)\n",
+    "\n",
+    "    plt.plot(x, y)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
    ]
   },
   {
@@ -331,7 +446,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load -s main ./notebook_snippets_run_mpl_test.py"
+    "# %load -s main ./notebook_snippets_run_mpl_test.py\n",
+    "def main():\n",
+    "    x = np.arange(-10, 10, 0.1)\n",
+    "    y = np.cos(x)\n",
+    "\n",
+    "    plt.plot(x, y)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -347,7 +470,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load -r 22-41 ./notebook_snippets_run_mpl_test.py"
+    "# %load -r 22-41 ./notebook_snippets_run_mpl_test.py\n",
+    "\n",
+    "\"\"\"\n",
+    "This module has been written to illustrate the ``%run`` magic command in\n",
+    "``notebook_snippets.ipynb``.\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def main():\n",
+    "    x = np.arange(-10, 10, 0.1)\n",
+    "    y = np.cos(x)\n",
+    "\n",
+    "    plt.plot(x, y)\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -399,6 +542,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On jupyter lab, you should install widgets extension first (see https://ipywidgets.readthedocs.io/en/latest/user_install.html#installing-the-jupyterlab-extension):\n",
+    "\n",
+    "```jupyter labextension install @jupyter-widgets/jupyterlab-manager```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -445,9 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#help(ipywidgets.interact)"
@@ -557,9 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@interact(num=(0., 10., 0.5))\n",
@@ -736,9 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@interact\n",
@@ -928,9 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def square(num):\n",
@@ -1054,9 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import Audio"
@@ -1136,9 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Audio('/path/to/sound.wav')"
@@ -1147,9 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Audio(filename='/path/to/sound.ogg')"
@@ -1165,9 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Audio(b'RAW_WAV_DATA..)"
@@ -1176,9 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Audio(data=b'RAW_WAV_DATA..)"
@@ -1204,9 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import YouTubeVideo"
@@ -1248,7 +1380,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1262,9 +1394,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
