Update Jupyter notebooks snippets.

--- a/notebook_snippets_en.ipynb
+++ b/notebook_snippets_en.ipynb
@@ -1185,6 +1185,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Display images (PNG, JPEG, GIF, ...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Within a code cell (using IPython.display)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(\"fourier.gif\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Within a Markdown cell"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Use the following Markdown syntax:\n",
+    "\n",
+    "![title](imga.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](fourier.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sound player widget"
    ]
   },
