--- a/maths_algebra_plot_animated_linear_equations_fr.ipynb
+++ b/maths_algebra_plot_animated_linear_equations_fr.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook can be useful to make a graphical representation of linear systems of 2 variables."
+    "This notebook can be useful to make a graphical representation of linear equations."
    ]
   },
   {
@@ -30,7 +30,6 @@
     "FIG_SIZE = 5\n",
     "\n",
     "def plot_linear_function(a, b, c, bounds=None, ax=None, color='r', alpha=1):\n",
-    "    \"\"\"Plot the linear system defined by the extended matrix `Ab`.\"\"\"\n",
     "    \n",
     "    # Check arguments #############\n",
     "    \n",
