--- a/python_matplotlib_geo_fr.ipynb
+++ b/python_matplotlib_geo_fr.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "tags": [
      "meta",
      "draft"
@@ -17,7 +16,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "tags": [
      "hide"
     ]
@@ -92,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from mpl_toolkits.basemap import Basemap\n",
@@ -140,7 +136,10 @@
     "print(pt_lat, pt_lon)\n",
     "print(x, y)\n",
     "\n",
-    "m.plot(x, y, 'ro');"
+    "m.plot(x, y, 'ro')\n",
+    "\n",
+    "#plt.savefig(\"map.png\")\n",
+    "plt.show()"
    ]
   },
   {
