--- a/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
+++ b/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
@@ -140,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
